fixed ipad sub-section-nav alignment issue

--- a/app/assets/sass/_sub-section-nav.scss
+++ b/app/assets/sass/_sub-section-nav.scss
@@ -2,56 +2,61 @@
     @include flexbox();
     @include flex-direction(row);
     @include flex-wrap(wrap);
-    margin:0 0 0 -50px;
+    margin:0 -50px 0 0;
     width:auto;
-    padding:30px 0;
+    padding:30px 0 60px;
 
     @media (max-width: 990px) {
-        padding:15px 0;
+        padding:15px 0 30px;
     }
 
     @media (max-width: 600px) {
-        padding:10px 0;
+        padding:10px 0 20px;
     }
 
     .sub-section{
         padding-bottom:10px;
-        width: calc(100% * (1/3) - 50px);
-        margin:30px 0 30px 50px;
+        width: calc(100% * (1/3));
+        margin:30px 0 20px;
         border:0;
 
         @media (max-width: 990px) {
-            width: calc(100% * (1/2) - 50px);
-            margin:25px 0 25px 50px;
+            width: 50%;
+            margin:20px 0 15px;
         }
 
         @media (max-width: 600px) {
             width: 100%;
-            margin:15px 0 15px 50px;
+            margin:10px 0;
         }
 
-        .sub-section-heading{
-            border-bottom:1px solid $light-grey;
-            margin:0 0 20px;
-            padding-bottom:10px;
+        .sub-section-content{
+            padding-right:50px;
 
-            @media (max-width: 767px) {
-                font-size:19px;
+            .sub-section-heading{
+                border-bottom:1px solid $light-grey;
+                margin:0 0 20px;
+                padding-bottom:10px;
+
+                @media (max-width: 767px) {
+                    font-size:19px;
+                }
             }
-        }
 
-        .list{
-            li{
-                margin-bottom: 15px;
+            .list{
+                li{
+                    margin-bottom: 15px;
 
-                a{
-                    text-decoration:none;
+                    a{
+                        text-decoration:none;
 
-                    &:hover{
-                        text-decoration:underline;
+                        &:hover{
+                            text-decoration:underline;
+                        }
                     }
                 }
             }
+
         }
 
     }
