--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -2234,41 +2234,43 @@ input[type="text"] :focus {
   -ms-flex-flex-wrap: wrap;
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin: 0 0 0 -50px;
+  margin: 0 -50px 0 0;
   width: auto;
-  padding: 30px 0; }
+  padding: 30px 0 60px; }
   @media (max-width: 990px) {
     .sub-section-nav {
-      padding: 15px 0; } }
+      padding: 15px 0 30px; } }
   @media (max-width: 600px) {
     .sub-section-nav {
-      padding: 10px 0; } }
+      padding: 10px 0 20px; } }
   .sub-section-nav .sub-section {
     padding-bottom: 10px;
-    width: calc(100% * (1/3) - 50px);
-    margin: 30px 0 30px 50px;
+    width: calc(100% * (1/3));
+    margin: 30px 0 20px;
     border: 0; }
     @media (max-width: 990px) {
       .sub-section-nav .sub-section {
-        width: calc(100% * (1/2) - 50px);
-        margin: 25px 0 25px 50px; } }
+        width: 50%;
+        margin: 20px 0 15px; } }
     @media (max-width: 600px) {
       .sub-section-nav .sub-section {
         width: 100%;
-        margin: 15px 0 15px 50px; } }
-    .sub-section-nav .sub-section .sub-section-heading {
-      border-bottom: 1px solid #DCDEE1;
-      margin: 0 0 20px;
-      padding-bottom: 10px; }
-      @media (max-width: 767px) {
-        .sub-section-nav .sub-section .sub-section-heading {
-          font-size: 19px; } }
-    .sub-section-nav .sub-section .list li {
-      margin-bottom: 15px; }
-      .sub-section-nav .sub-section .list li a {
-        text-decoration: none; }
-        .sub-section-nav .sub-section .list li a:hover {
-          text-decoration: underline; }
+        margin: 10px 0; } }
+    .sub-section-nav .sub-section .sub-section-content {
+      padding-right: 50px; }
+      .sub-section-nav .sub-section .sub-section-content .sub-section-heading {
+        border-bottom: 1px solid #DCDEE1;
+        margin: 0 0 20px;
+        padding-bottom: 10px; }
+        @media (max-width: 767px) {
+          .sub-section-nav .sub-section .sub-section-content .sub-section-heading {
+            font-size: 19px; } }
+      .sub-section-nav .sub-section .sub-section-content .list li {
+        margin-bottom: 15px; }
+        .sub-section-nav .sub-section .sub-section-content .list li a {
+          text-decoration: none; }
+          .sub-section-nav .sub-section .sub-section-content .list li a:hover {
+            text-decoration: underline; }
 
 .btn {
   font-weight: 600;
